building the whole env, add the structure of the api, and start making the algorithm

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
   #   image: redis
   api:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    # command: python manage.py runserver 0.0.0.0:8000
+    command: bash init.sh
     volumes:
       - .:/api
     ports:
