--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,10 @@ services:
   api:
     build: .
     # command: python manage.py runserver 0.0.0.0:8000
-    command: bash init.sh
+    command: init.sh
     volumes:
       - .:/api
-    ports:
-      - "8000:8000"
+    env_file:
+      - ./src/.env
     # depends_on:
     #   - cache
